Fix mask scaling and clipping

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -51,7 +51,6 @@ body {
     width: 1px;
     height: 1px;
     border: none;
-    border-radius: 5px;
     background-image: url('mask.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -59,6 +58,7 @@ body {
     background-position: center;
     display: none;
     overflow: visible;
+    transform: scale(1.3);
 }
 
 #face0 {
